# serializer version: 1
# name: TestDifficalcyCatchDifficultyCalculator.test_calculate_scores
  list([
    Calculation(
      difficulty_values=dict({
        'total': 5.560488609256414,
      }),
      performance_values=dict({
        'total': 226.4106426420045,
      }),
    ),
  ])
# ---
# name: TestDifficalcyCatchDifficultyCalculator.test_get_beatmap_details
  BeatmapDetails(
    artist='Unknown',
    author='Unknown Creator',
    base_velocity=1.6,
    common_bpm=120,
    difficulty_name='Normal',
    difficulty_settings=dict({
      'approach_rate': 8.3,
      'circle_size': 4,
      'drain_rate': 5,
    }),
    hitobject_counts=dict({
      'banana_showers': 3,
      'fruits': 78,
      'juice_streams': 12,
    }),
    length=45250,
    max_combo=127,
    maximum_bpm=120,
    mininum_bpm=120,
    tick_rate=1,
    title='Unknown',
  )
# ---
# name: TestDifficalcyDifficultyCalculator.test_calculate_scores
  list([
    Calculation(
      difficulty_values=dict({
        'aim': 2.931964039669495,
        'flashlight': 0,
        'speed': 3.0719986654662823,
        'total': 6.294293342707777,
      }),
      performance_values=dict({
        'accuracy': 83.9838091927015,
        'aim': 122.82365726224828,
        'flashlight': 0,
        'speed': 137.33708223365028,
        'total': 358.86598978801396,
      }),
    ),
    Calculation(
      difficulty_values=dict({
        'aim': 3.1710525152307567,
        'flashlight': 0,
        'speed': 3.0845312684219364,
        'total': 6.55537654432227,
      }),
      performance_values=dict({
        'accuracy': 169.06122268521966,
        'aim': 189.00295549800694,
        'flashlight': 0,
        'speed': 176.71960468663355,
        'total': 556.6053238383237,
      }),
    ),
    Calculation(
      difficulty_values=dict({
        'aim': 3.1710525152307567,
        'flashlight': 0,
        'speed': 3.0845312684219364,
        'total': 6.55537654432227,
      }),
      performance_values=dict({
        'accuracy': 216.31133737582476,
        'aim': 214.36465227080254,
        'flashlight': 0,
        'speed': 209.530750791515,
        'total': 666.2654686196685,
      }),
    ),
    Calculation(
      difficulty_values=dict({
        'aim': 3.2556879022731793,
        'flashlight': 0,
        'speed': 2.0082542663345504,
        'total': 5.854140057199108,
      }),
      performance_values=dict({
        'accuracy': 12.368997155942548,
        'aim': 49.7362338663849,
        'flashlight': 0,
        'speed': 7.181221326403531,
        'total': 74.39657751330903,
      }),
    ),
  ])
# ---
# name: TestDifficalcyDifficultyCalculator.test_context_manager
  list([
    Calculation(
      difficulty_values=dict({
        'aim': 2.118735459664974,
        'flashlight': 0,
        'speed': 2.1684114250452144,
        'total': 4.492310309756154,
      }),
      performance_values=dict({
        'accuracy': 36.07670429437059,
        'aim': 46.26971335416548,
        'flashlight': 0,
        'speed': 49.870242023878504,
        'total': 137.7209357109564,
      }),
    ),
  ])
# ---
# name: TestDifficalcyManiaDifficultyCalculator.test_calculate_scores
  list([
    Calculation(
      difficulty_values=dict({
        'total': 2.797245912537965,
      }),
      performance_values=dict({
        'difficulty': 43.17076331130473,
        'total': 21.585381655652366,
      }),
    ),
  ])
# ---
# name: TestDifficalcyManiaDifficultyCalculator.test_get_beatmap_details
  BeatmapDetails(
    artist='Unknown',
    author='Unknown Creator',
    base_velocity=1.6,
    common_bpm=120,
    difficulty_name='Normal',
    difficulty_settings=dict({
      'accuracy': 7,
      'drain_rate': 5,
      'key_count': 4,
    }),
    hitobject_counts=dict({
      'hold_notes': 14,
      'notes': 123,
    }),
    length=30500,
    max_combo=151,
    maximum_bpm=120,
    mininum_bpm=120,
    tick_rate=1,
    title='Unknown',
  )
# ---
# name: TestDifficalcyOsuDifficultyCalculator.test_calculate_scores
  list([
    Calculation(
      difficulty_values=dict({
        'aim': 2.931964039669495,
        'flashlight': 0,
        'speed': 3.0719986654662823,
        'total': 6.294293342707777,
      }),
      performance_values=dict({
        'accuracy': 83.9838091927015,
        'aim': 122.82365726224828,
        'flashlight': 0,
        'speed': 137.33708223365028,
        'total': 358.86598978801396,
      }),
    ),
  ])
# ---
# name: TestDifficalcyOsuDifficultyCalculator.test_get_beatmap_details
  BeatmapDetails(
    artist='senya',
    author='Satellite',
    base_velocity=1.7,
    common_bpm=138,
    difficulty_name='Marathon',
    difficulty_settings=dict({
      'accuracy': 6,
      'approach_rate': 8,
      'circle_size': 4,
      'drain_rate': 5,
    }),
    hitobject_counts=dict({
      'circles': 1093,
      'slider_ticks': 346,
      'sliders': 659,
      'spinners': 1,
    }),
    length=678047,
    max_combo=2758,
    maximum_bpm=168,
    mininum_bpm=121,
    tick_rate=2,
    title='Songs Compilation',
  )
# ---
# name: TestDifficalcyPerformancePlusDifficultyCalculator.test_calculate_scores
  list([
    Calculation(
      difficulty_values=dict({
        'accuracy': 1.0546478295311437,
        'aim': 2.8804685309467284,
        'flowAim': 1.6727417520197583,
        'jumpAim': 2.8763118223866133,
        'precision': 1.714528074416766,
        'speed': 3.179656468968935,
        'stamina': 2.8045880770770752,
        'total': 6.123075221732318,
      }),
      performance_values=dict({
        'accuracy': 87.89378488351228,
        'aim': 68.38232334186907,
        'flowAim': 13.391867347855435,
        'jumpAim': 68.08670955755021,
        'precision': 14.420763347653594,
        'speed': 99.53445865488443,
        'stamina': 68.30305130767819,
        'total': 259.5756907401086,
      }),
    ),
  ])
# ---
# name: TestDifficalcyPerformancePlusDifficultyCalculator.test_get_beatmap_details
  BeatmapDetails(
    artist='senya',
    author='Satellite',
    base_velocity=1.7,
    common_bpm=138,
    difficulty_name='Marathon',
    difficulty_settings=dict({
      'accuracy': 6,
      'approach_rate': 8,
      'circle_size': 4,
      'drain_rate': 5,
    }),
    hitobject_counts=dict({
      'circles': 1093,
      'slider_ticks': 346,
      'sliders': 659,
      'spinners': 1,
    }),
    length=678047,
    max_combo=2758,
    maximum_bpm=168,
    mininum_bpm=121,
    tick_rate=2,
    title='Songs Compilation',
  )
# ---
# name: TestDifficalcyTaikoDifficultyCalculator.test_calculate_scores
  list([
    Calculation(
      difficulty_values=dict({
        'colour': 0.6552532719640201,
        'rhythm': 0.041101226071239186,
        'stamina': 2.861677137388462,
        'total': 4.616848746682018,
      }),
      performance_values=dict({
        'accuracy': 169.03802944742503,
        'difficulty': 89.1797160815413,
        'total': 275.2953534626361,
      }),
    ),
  ])
# ---
# name: TestDifficalcyTaikoDifficultyCalculator.test_get_beatmap_details
  BeatmapDetails(
    artist='Unknown',
    author='Unknown Creator',
    base_velocity=1.6,
    common_bpm=120,
    difficulty_name='Normal',
    difficulty_settings=dict({
      'accuracy': 7,
      'drain_rate': 5,
    }),
    hitobject_counts=dict({
      'drum_rolls': 30,
      'hits': 200,
      'swells': 8,
    }),
    length=53000,
    max_combo=200,
    maximum_bpm=120,
    mininum_bpm=120,
    tick_rate=1,
    title='Unknown',
  )
# ---
